# Punchrap

./: .gitignore  COMMERCIAL_STUDIO_ROADMAP.md  README.md  app.js  desktop-host-manifest.json  desktop-package-manifest.json  desktop-wrapper-manifest.json  index.html  manifest.webmanifest  package-lock.json  package.json  plugin-host-manifest.json  server.mjs  styles.css  sw.js
scripts/: build-desktop-dist.mjs  check-desktop-contract.mjs  check.mjs  desktop-doctor.mjs  start-desktop-dev-server.mjs
src/: audio.js  beat-playback.js  chain-params.js  comp-panel.js  desktop.js  devices.js  dsp.js  engine-contract.js  engine.js  export-mastering.js  export-panel.js  export-plan.js  files.js  format.js  mix.js  native-adapter.js  native-bridge.js  native-fixture.js  pitch.js  platform.js  presets.js  project-session.js  project-zip.js  project.js  record-timeline.js  runtime-guard.js  shortcuts.js  storage.js  studio-state.js  take-panel.js  takes.js  tauri-bridge.js  templates.js  timeline-panel.js  timeline.js  track-panel.js  tracks.js  ui-elements.js  ui-events.js  ui-renderers.js  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
