[package]
name = "punchlab"
version = "0.1.0"
description = "PunchLab local rap vocal studio desktop shell."
authors = ["isuu2008-ai"]
edition = "2021"

[lib]
name = "punchlab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
